--- a/app/pages/welcome/welcome.html
+++ b/app/pages/welcome/welcome.html
@@ -2,6 +2,8 @@
     <button menuToggle>
         <ion-icon name="menu"></ion-icon>
     </button>
+    
+    <ion-title>Welcome to DreamHouse Realty -- Charlie</ion-title>
 
 </ion-navbar>
 
